--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "dist:dev-prod:linux": "cross-env ELECTRON_DEV_PROD=true npm run build && cross-env ELECTRON_DEV_PROD=true electron-builder --linux"
   },
   "dependencies": {
-    "@datalayer/core": "file:../..",
+    "@datalayer/core": "file:../core",
     "@datalayer/jupyter-lexical": "^1.0.4",
     "@datalayer/jupyter-react": "^1.1.0",
     "@datalayer/lexical-loro": "^0.0.7",
@@ -50,13 +50,16 @@
     "@lexical/react": "^0.35.0",
     "@lexical/rich-text": "^0.35.0",
     "@primer/react": "^36.27.0",
+    "@primer/react-brand": "^0.58.1",
     "@types/ws": "^8.18.1",
     "electron-log": "^5.4.3",
     "electron-store": "^10.1.0",
     "fast-deep-equal": "^3.1.3",
     "form-data": "^4.0.4",
+    "json5": "^2.2.3",
     "lexical": "^0.35.0",
     "lodash": "^4.17.21",
+    "prettier": "^3.6.2",
     "prismjs": "^1.30.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
