--- a/package.json
+++ b/package.json
@@ -22,6 +22,14 @@
     "check": "npm run format:check && npm run lint && npm run type-check",
     "check:fix": "npm run format && npm run lint:fix && npm run type-check",
     "start": "rm -rf node_modules/.vite dist .electron-vite && electron-vite dev",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "test:unit": "vitest run --project unit",
+    "test:integration": "vitest run --project integration",
+    "test:e2e": "playwright test",
+    "test:watch": "vitest --watch",
+    "test:ci": "vitest run --coverage && playwright test",
     "dist": "npm run build && electron-builder",
     "dist:mac": "npm run build && electron-builder --mac --universal",
     "dist:mac-universal": "npm run build && electron-builder --mac --universal",
@@ -73,15 +81,22 @@
   "devDependencies": {
     "@axe-core/react": "^4.10.2",
     "@eslint/js": "^9.36.0",
+    "@playwright/test": "^1.49.1",
     "@rollup/plugin-commonjs": "^28.0.6",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/form-data": "^2.2.1",
     "@types/node": "^20.16.17",
     "@types/prismjs": "^1.26.5",
     "@types/react": "^18.3.13",
     "@types/react-dom": "^18.3.1",
+    "@types/ws": "^8.5.13",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
     "cross-env": "^7.0.3",
     "electron": "34.5.8",
     "electron-builder": "^25.1.8",
@@ -92,13 +107,16 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "glob": "^11.0.3",
+    "happy-dom": "^15.11.7",
+    "msw": "^2.7.0",
     "patch-package": "^8.0.0",
     "typedoc": "^0.28.13",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
     "vite-plugin-string": "^1.2.3",
     "vite-plugin-top-level-await": "^1.6.0",
-    "vite-plugin-wasm": "^3.5.0"
+    "vite-plugin-wasm": "^3.5.0",
+    "vitest": "^2.1.8"
   },
   "build": {
     "appId": "io.datalayer.desktop",
