--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,css,json,md}\"",
     "check": "npm run format:check && npm run lint && npm run type-check",
     "check:fix": "npm run format && npm run lint:fix && npm run type-check",
-    "start": "rm -rf node_modules/.vite dist .electron-vite && electron-vite dev",
+    "start": "rm -rf dist .electron-vite && electron-vite dev",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
