--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,56 +70,18 @@ jobs:
         with:
           path: datalayer/desktop
           fetch-depth: 0
-          retries: 3
 
       - name: Checkout core repository
         uses: actions/checkout@v4
         with:
           repository: goanpeca/core
-          ref: enh/sdk-updates
+          ref: sdk/core-updates
           path: datalayer/core
-          retries: 3
 
-      - name: Debug directory structure
-        run: |
-          echo "=== Current working directory ==="
-          pwd
-          echo "=== Directory structure ==="
-          find datalayer -type d -maxdepth 3
-          echo "=== Core lib contents ==="
-          ls -la datalayer/core/lib/ || echo "No core lib found"
-        shell: bash
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup build environment
+        uses: ./datalayer/desktop/.github/actions/setup-environment
         with:
-          node-version: '22'
-
-      - name: Skip core repository postinstall scripts
-        working-directory: datalayer/core
-        run: |
-          if [ -f package.json ]; then
-            echo "Removing problematic scripts from core package.json"
-            cp package.json package.json.backup
-            node -e "const pkg = require('./package.json'); delete pkg.scripts?.postinstall; delete pkg.scripts?.prepare; require('fs').writeFileSync('package.json', JSON.stringify(pkg, null, 2));"
-          fi
-        shell: bash
-
-      - name: Install core repository dependencies and build
-        working-directory: datalayer/core
-        run: |
-          echo "Installing core dependencies..."
-          npm install --ignore-scripts
-          echo "Building core SDK lib..."
-          npm run build:lib
-          echo "Building core full with increased memory..."
-          export NODE_OPTIONS="--max-old-space-size=8192"
-          npm run build
-        shell: bash
-
-      - name: Install desktop dependencies
-        working-directory: datalayer/desktop
-        run: npm install
+          os: ${{ matrix.os }}
 
       # Linux Build
       - name: Build for Linux
